Fixed webpage using flexbox, dont repeat code, kalo bisa digabung gabung aja. dont wrap if not needed

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 5px 15px 5px 15px;
 }
 
 input {
@@ -23,4 +24,47 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.left-links, .right-links{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  flex: 1;
+
+}
+
+.footer{
+  background-color: #eee;
+}
+
+
+a{
+  text-decoration: none;
+  color: darkgray;
+}
+ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
